[metadata]
name = pio
author = Richie Bendall
author_email = richiebendall@gmail.com
license = MIT License
description = A simplified, yarn-like alternative to pip.
url = https://github.com/Richienb/pio
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Environment :: Plugins
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pio

[options.entry_points]
console_scripts =
    pio = pio:main
